--- a/src/main.css
+++ b/src/main.css
@@ -39,3 +39,38 @@
 	z-index: 2;
 	cursor: pointer;
 }
+
+.block-revisions-viewer.status-new {
+	border: solid 1px limegreen;
+}
+
+.block-revisions-viewer.status-new:before {
+	content: 'Added';
+	background-color: limegreen;
+	color: white;
+	padding: 2px 4px;
+	font-size: 12px;
+	margin-top: 13px;
+	position: relative;
+	top: -24px;
+}
+
+.block-revisions-viewer.status-old {
+	border: solid 1px red;
+}
+
+.block-revisions-viewer.status-old:before {
+	content: 'Removed';
+	background-color: red;
+	color: white;
+	padding: 2px 4px;
+	font-size: 12px;
+	margin-top: 13px;
+	position: relative;
+	top: -24px;
+}
+
+
+.block-revisions-viewer.status-changed {
+	border: solid 1px lightskyblue;
+}
