evaluate changes, show before/after

--- a/src/main.css
+++ b/src/main.css
@@ -40,6 +40,11 @@
 	cursor: pointer;
 }
 
+.block-revisions-viewer {
+	margin: 0;
+	padding: 0;
+}
+
 .block-revisions-viewer.status-new {
 	border: solid 1px limegreen;
 }
